# almoji

./: .gitignore  ALFRED_WORKFLOW.md  Almoji-Workflow.alfredworkflow  Cargo.toml  Makefile  README.md  build.sh  create_icon.py  install.sh
Almoji.alfredworkflow/: README.md  almoji  icon.png.txt  info.plist
src/: emoji_search.rs  main.rs  menubar_main.rs
src/menubar/: gui.rs  macos_statusbar.rs  mod.rs  settings.rs
