[package]
name = "almoji"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "almoji"
path = "src/main.rs"

[[bin]]
name = "almoji-menubar"
path = "src/menubar_main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
emojis = "0.8"
once_cell = "1.19"

# GUI dependencies
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"

# Hotkey and system integration
global-hotkey = "0.6"
arboard = "3.4"

# Settings persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"
